<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="pax">Num of Pax</string>
    <string name="gst">GST</string>
    <string name="discount">Discount(%)</string>
    <string name="show_total">Total Bill: </string>
    <string name="show_each">Each Pays: </string>
    <string name="gstDisabled">GST</string>
    <string name="gstEnabled">GST</string>
    <string name="svsDisabled">SVS</string>
    <string name="svsEnabled">SVS</string>
    <string name="split">Split</string>
    <string name="reset">Reset</string>
</resources>
